<resources>
    <string name="app_name">CryptoCurrencyApp</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="сryptocurrencies">Cryptocurrencies</string>
    <string name="sort">Sort</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="by_price">By price</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="all">ALL</string>
    <string name="_1y">1Y</string>
    <string name="_1m">1M</string>
    <string name="_1w">1W</string>
    <string name="_24h">24H</string>
    <string name="market_cap">Market cap</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="download_photo">Download photo</string>
    <string name="take_picture">Take a picture</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="permission_is_required">Permission is required</string>
    <string name="saved">Saved</string>
    <string name="no_connection_to_the_internet">No connection to the internet</string>
    <string name="try_again">Try Again</string>
    <string name="too_many_requests">Too many requests, please try again later</string>
    <string name="сonnection_error">Connection error</string>
</resources>