<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/logo_details"
                android:layout_height="@dimen/logo_details"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_start_name_details"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/margin_end_name"
                android:textSize="@dimen/text_name_details"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Bitcoin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_price_details"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_price_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="17223.68 $" />

    <TextView
        android:id="@+id/changePercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_change_details"
        android:gravity="center"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/text_change_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price"
        tools:text="+999.9 %" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_chart"
        android:layout_marginTop="@dimen/margin_top_chart"
        app:layout_constraintTop_toBottomOf="@id/changePercentage" />

    <TextView
        android:id="@+id/item1day"
        android:layout_width="@dimen/item_chart_details_width"
        android:layout_height="@dimen/item_chart_details_height"
        android:layout_marginStart="@dimen/start_item_chart"
        android:layout_marginTop="@dimen/top_item_chart"
        android:background="@drawable/background_item_chart"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/_24h"
        android:textColor="@color/white"
        android:textSize="@dimen/text_item_chart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart" />

    <TextView
        android:id="@+id/item7days"
        android:layout_width="@dimen/item_chart_details_width"
        android:layout_height="@dimen/item_chart_details_height"
        android:layout_marginTop="@dimen/top_item_chart"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/_1w"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_item_chart"
        app:layout_constraintEnd_toStartOf="@+id/item30days"
        app:layout_constraintStart_toEndOf="@+id/item1day"
        app:layout_constraintTop_toBottomOf="@id/chart" />

    <TextView
        android:id="@+id/item30days"
        android:layout_width="@dimen/item_chart_details_width"
        android:layout_height="@dimen/item_chart_details_height"
        android:layout_marginTop="@dimen/top_item_chart"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/_1m"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_item_chart"
        app:layout_constraintEnd_toStartOf="@+id/item365days"
        app:layout_constraintStart_toEndOf="@+id/item7days"
        app:layout_constraintTop_toBottomOf="@id/chart" />

    <TextView
        android:id="@+id/item365days"
        android:layout_width="@dimen/item_chart_details_width"
        android:layout_height="@dimen/item_chart_details_height"
        android:layout_marginTop="@dimen/top_item_chart"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/_1y"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_item_chart"
        app:layout_constraintEnd_toStartOf="@+id/itemAll"
        app:layout_constraintStart_toEndOf="@+id/item30days"
        app:layout_constraintTop_toBottomOf="@id/chart" />

    <TextView
        android:id="@+id/itemAll"
        android:layout_width="@dimen/item_chart_details_width"
        android:layout_height="@dimen/item_chart_details_height"
        android:layout_marginTop="@dimen/top_item_chart"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/all"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_item_chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart" />

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:layout_marginStart="@dimen/margin_start_line"
        android:layout_marginTop="@dimen/top_item_chart"
        android:layout_marginEnd="@dimen/margin_end_line"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/item1day" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_item_chart"
        android:layout_marginTop="@dimen/top_item_chart"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/market_cap"
        android:textColor="@color/black"
        android:textSize="@dimen/text_market_cap_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineView" />

    <TextView
        android:id="@+id/marketCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/start_item_chart"
        android:layout_marginTop="@dimen/top_item_chart"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/text_market_cap_value_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineView"
        tools:text="$ 999,99 B" />

    <TextView
        android:id="@+id/minPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/chart_min_start"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_chart_min"
        app:layout_constraintBottom_toBottomOf="@+id/chart"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="5000 $" />


    <TextView
        android:id="@+id/maxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/chart_max_end"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_max_chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/chart"
        tools:text="18000 $" />

    <ImageView
        android:id="@+id/animImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>